[package]
name = "pcd-tracking"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nalgebra = "0.32.3"
serde = { version = "1.0.152", features = ["derive"] }
noisy_float = "0.2.0"
itertools = "0.10.5"
priority-matrix = "0.2.0"
geo = "0.23.1"
